fix weird issue on firefox with row-align

--- a/sass/gridle/_driver-default.scss
+++ b/sass/gridle/_driver-default.scss
@@ -385,7 +385,7 @@
 				font-size:1rem;
 				@-moz-document url-prefix() {
 					& {
-						margin-right: -0.16px; // fix firefox weird issue
+						margin-right: -0.5px; // fix firefox weird issue
 					}
 				}
 			}
